update the jvm_args
thanks @Glomzubuk